# ray-tracer

./: .gitmodules  meson.build  meson.options  perf.data  perf.data.old
src/: 2dshapes.h  camera.h  colour.h  image.h  interval.h  main.cc  material.h  meson.build  parallelepiped.h  rand.h  ray.h  raytracer.h  renderer.h  renderobject.h  renderobjectlist.h  sphere.h  util.h  vec3.h
